2010-06-14  Chris Toshok  <toshok@ximian.com>

	* MessageBox.cs: track pal api changes.

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Remove confusing 'catch hack' for External
	CallersFromCrossDomain. Reduce duplication code when initializing
	the deployment. Add start/end boundaries for initializing some
	properties (so we can throw afterward).

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* Application.cs: Enable isolated storage increase

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Install() now calls Install(false) - i.e.
	not unattended. Add, #ifdef out, quota increase for OOB apps

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: Tighten up the places where we emit
	  validation errors. Fixes some more of 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* DependencyObjectCollection.cs:
	* PresentationFrameworkCollection.cs: use the new extension
	  method to raise the INCC event and remove old (duplicated)
	  boilerplate.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: Update our implementation of mentors to
	  allow us to listen for changes to the mentor and correctly
	  NULL it out when the mentor is destroyed as if we were to
	  ref the mentor we'd create a cycle.

2010-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Clipboard.cs: Ensure [G|S]etText methods are user initiated

2010-06-01  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: Implement the first section of mentor
	  based databinding. When doing DataContext based bindings on
	  DependencyObjects, we get the DataContext from the first
	  FrameworkElement in the actual tree (not visual tree). This
	  FE is known as the 'mentor'. 

2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: We should only seal the binding after
	  all validation is successful. Add in a missing sanity check